# CodeSide

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: simulator.rs  walk_grid.rs
etc/: config.json  happy_new_year_rus_level_input.txt  optimal_location.options_index.json  options_index.json  plan_weights.options_index.json
etc/local_runner/: template.json
local_runner/levels/: happy_new_year_rus.txt  labyrinth.txt
scripts/: check_games.py  convert_logs.py  dev.sh  dump_examples.sh  durations.py  games.py  helpers.py  hist.py  local_runner.py  loop_dev.sh  merge_neighborhood_score.py  neighborhood_to_rust.py  optimize_config.py  plot.py  release.sh  render_text_level.py  results_stats.py  run.py  site_report.py
src/: bullet.rs  common.rs  config.rs  const_neighborhood_score.rs  debug.rs  examples.rs  hit.rs  level.rs  lib.rs  location.rs  loot_box.rs  main.rs  map.rs  mine.rs  my_strategy.rs  my_strategy_check_simulator.rs  my_strategy_dump_examples.rs  my_strategy_dump_opponent.rs  my_strategy_dump_properties_json.rs  my_strategy_go_to_target.rs  my_strategy_impl.rs  my_strategy_jump.rs  my_strategy_pusher.rs  my_strategy_simple.rs  my_strategy_weapon_spread.rs  neighborhood_score.rs  optimal_action.rs  optimal_destination.rs  optimal_location.rs  optimal_path.rs  optimal_plan.rs  optimal_target.rs  optimal_tile.rs  optimization.rs  plan.rs  polygon.rs  positionable.rs  properties.rs  random.rs  rect.rs  (+14 more)
tests/: common.rs  config.rs  examples.rs  helpers.rs  hit.rs  level.rs  map.rs  my_strategy_impl.rs  optimal_action.rs  optimal_location.rs  optimal_path.rs  optimal_tile.rs  plan.rs  rect.rs  sector.rs  simulator.rs  vec2.rs  walk_grid.rs  weapon.rs  weapon_params.rs  world.rs
