[package]
name = "aicup2019"
version = "0.1.0"
edition = "2018"

[dependencies]
model = { path = "raic/clients/rust/model", package = "aicup2019-model" }
trans = { path = "raic/clients/rust/model/trans" }
criterion = "0.3"

[profile.release]
debug = true

[features]
dump_examples = []
dump_opponent = []
go_to_target = []
enable_debug = []
disable_output = []
dump_level = []
verify_collisions = []

[[bench]]
name = "simulator"
harness = false
