[package]
name = "aicup2019"
version = "0.1.0"
edition = "2018"

[dependencies]
model = { path = "raic/clients/rust/model", package = "aicup2019-model" }
trans = { path = "raic/clients/rust/model/trans" }
criterion = "0.3"
rustc-serialize = "0.3"

[profile.release]
debug = true

[features]
dump_examples = []
dump_opponent = []
enable_debug = []
disable_output = []
dump_level = []
verify_collisions = []
enable_log = []
dump_properties_json = []
read_config = []
dump_config = []
jump = []
check_simulator = []
enable_debug_backtrack = []
enable_debug_log = []
enable_debug_optimal_location = []
enable_debug_optimal_plan = []
enable_debug_optimal_target = []
enable_debug_plan = []
enable_debug_simulator = []
enable_debug_unit = []
simulator_pickup_weapon = []
simulator_pickup_mine = []
max_tick = []

[[bench]]
name = "simulator"
harness = false

[[bench]]
name = "walk_grid"
harness = false
